--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.3.0
+// Near Future Construction 0.6.1
 // Radial Adapter - 1.25m
 PART
 {
@@ -10,7 +10,7 @@ PART
 	{
 		model = NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125
 		position = 0.0, 0.0, 0.0
-		scale = 2.0,2.0,2.0
+		scale = 1.0,1.0,1.0
 		rotation = 0, 0, 0
 		
 	}
@@ -18,9 +18,9 @@ PART
 	scale = 1
 	rescaleFactor = 1.0
 
-	node_attach = -0.32, 0.0, 0.0, -1.0, 0.0, 0.0, 1
-	node_stack_top = 0.0, 0.056, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.054, 0.0, 0.0, -1.0, 0.0, 1
+	node_attach = 0.0, 0.0, 0.7694429, 0.0, 0.0, -1.0, 1
+	node_stack_top = 0.0, 0.09551144, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_bottom = 0.0, -0.09669527, 0.0, 0.0, -1.0, 0.0, 1
 	
 	TechRequired = metaMaterials
 	entryCost = 3100
