--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.3.0
+// Near Future Construction 0.6.1
 // Radial Adapter - 0.625m
 PART
 {
@@ -10,9 +10,9 @@ PART
 	scale = 1
 	rescaleFactor = 1.0
 
-	node_attach = -0.32, 0.0, 0.0, -1.0, 0.0, 0.0, 1
-	node_stack_top = 0.0, 0.056, 0.0, 0.0, 1.0, 0.0, 0
-	node_stack_bottom = 0.0, -0.054, 0.0, 0.0, -1.0, 0.0, 0
+	node_attach = 0.0, 0.0, 0.4732634, 0.0, 0.0, -1.0, 1
+	node_stack_top = 0.0, 0.07728595, 0.0, 0.0, 1.0, 0.0, 0
+	node_stack_bottom = 0.0, -0.07728595, 0.0, 0.0, -1.0, 0.0, 0
 	
 	bulkheadProfiles = size0, srf
 	
@@ -20,7 +20,7 @@ PART
 	entryCost = 1950
 	MODEL
 	{
-		model = NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125
+		model = NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625
 		position = 0.0, 0.0, 0.0
 		scale = 1.0,1.0,1.0
 		rotation = 0, 0, 0
