--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.0
+// Near Future Construction 0.6.2
 // 2.5m Truss - Structural
 PART
 {
@@ -29,7 +29,7 @@ PART
 	subcategory = 0
 	title = Modular Multipurpose Octo-Girder XL
 	manufacturer = Giga Bloks Construction Toys
-	description = A large octagonal truss piece. Several variants are available with different structural configurations.
+	description = A large octagonal truss piece. Several variants are available with different structural and fuel configurations.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss, srf
@@ -53,7 +53,7 @@ PART
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Subtype
-		
+		baseVolume = 6000
 		SUBTYPE
 		{
 			name = Solid
@@ -106,6 +106,61 @@ PART
 			
 			addedMass = -0.09
 		}
-		
+		SUBTYPE
+		{
+			name = LFO
+			tankType = LFOX
+			transform = OctoLargeBare
+			transform = COLLISION15
+			transform = LFOTankLarge	
+			addedCost = 2812.4		
+		}
+		SUBTYPE
+		{
+			name = LiquidFuel
+			tankType = LF
+			transform = OctoLargeBare
+			transform = COLLISION15
+			transform = LFTankLarge
+			addedCost = 2812.4
+
+		}
+		SUBTYPE
+		{
+			name = Oxidizer
+			tankType = OX
+			transform = OctoLargeBare
+			transform = COLLISION15
+			transform = OXTankLarge
+			addedCost = 2812.4
+		}
+		SUBTYPE
+		{
+			name = Mission Support
+			tankType = MPEC
+			transform = OctoLargeBare
+			transform = COLLISION15
+			transform = MPTankLarge
+			addedCost = 5250	
+
+		}
+		SUBTYPE
+		{
+			name = Xenon
+			tankType = Xenon
+			transform = OctoLargeBare
+			transform = COLLISION15
+			transform = XeTankLarge
+			addedCost = 18900	
+		}
+		SUBTYPE
+		{
+			name = Ore
+			tankType = Ore
+			transform = OctoLargeBare
+			transform = COLLISION15
+			transform = OreTankLarge
+			addedCost = 12000
+		}
 	}
 }
