--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.0
+// Near Future Construction 0.6.2
 // 2.5m Truss - Structural - Half
 PART
 {
@@ -29,7 +29,7 @@ PART
 	subcategory = 0
 	title = Modular Multipurpose Octo-Girder
 	manufacturer = Giga Bloks Construction Toys
-	description = A medium octagonal truss piece. Several variants are available with different structural configurations.
+	description = A medium octagonal truss piece. Several variants are available with different structural and fuel configurations.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss, srf
@@ -53,7 +53,7 @@ PART
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Subtype
-		
+		baseVolume = 3000
 		SUBTYPE
 		{
 			name = Solid
@@ -104,6 +104,62 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.045
+		}
+		SUBTYPE
+		{
+			name = LFO
+			tankType = LFOX
+			transform = OctoMedBare
+			transform = COLLISION14
+			transform = LFOTankMed	
+			addedCost = 1406.2		
+		}
+		SUBTYPE
+		{
+			name = LiquidFuel
+			tankType = LF
+			transform = OctoMedBare
+			transform = COLLISION14
+			transform = LFTankMed
+			addedCost = 1406.2	
+
+		}
+		SUBTYPE
+		{
+			name = Oxidizer
+			tankType = OX
+			transform = OctoMedBare
+			transform = COLLISION14
+			transform = OXTankMed
+			addedCost = 1406.2	
+		}
+		SUBTYPE
+		{
+			name = Mission Support
+			tankType = MPEC
+			transform = OctoMedBare
+			transform = COLLISION14
+			transform = MPTankMed
+			addedCost = 2625
+
+		}
+		SUBTYPE
+		{
+			name = Xenon
+			tankType = Xenon
+			transform = OctoMedBare
+			transform = COLLISION14
+			transform = XeTankMed
+			addedCost = 9450
+		}
+		SUBTYPE
+		{
+			name = Ore
+			tankType = Ore
+			transform = OctoMedBare
+			transform = COLLISION14
+			transform = OreTankMed
+			addedCost = 6000
 		}
 	}
 }
