--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.0
+// Near Future Construction 0.6.2
 // 2.5m Truss Attach
 PART
 {
@@ -27,7 +27,7 @@ PART
 	subcategory = 0
 	title = Modular Octo-Girder Radial Attach Node
 	manufacturer = Giga Bloks Construction Toys
-	description = A radial attachment node that allows the Modular Octo-Girder to, quite literally, do anything.
+	description = A radial attachment node that allows the Modular Octo-Girder to, quite literally, do anything. Two variants that work at 90 or 45 degrees to a standard truss. 
 	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
@@ -43,5 +43,39 @@ PART
 	thermalMassModifier = 0.4 // I am hollow
 	
 	tags = connect frame scaffold structur strut truss nearfuture radial octo 
-	
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitch
+		switcherDescription = Subtype
+		
+		SUBTYPE
+		{
+			name = Angled
+			transform = OctoAttach
+			transform = COLLISION
+		}
+		
+		SUBTYPE
+		{
+			name = Angled Hollow
+			transform = OctoAttachHollow
+			transform = COLLISION
+			
+		}
+		SUBTYPE
+		{
+			name = Ortho
+			transform = OctoAttachAlt
+			transform = COLLISIONALT
+		}
+		
+		SUBTYPE
+		{
+			name = Ortho Hollow
+			transform = OctoAttachAltHollow
+			transform = COLLISIONALT
+			
+		}
+	}
 }
