--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
@@ -74,7 +74,7 @@ PART
 			transform = COLLISION19
 			node = top02
 			node = bottom02
-			
+			crashTolerance = 60
 			addedMass = -0.025
 		}
 		SUBTYPE
@@ -89,7 +89,7 @@ PART
 			transform = COLLISION19
 			node = top02
 			node = bottom02
-			
+			crashTolerance = 50
 			addedMass = -0.035
 		}
 		SUBTYPE
@@ -103,6 +103,7 @@ PART
 			transform = COLLISION19
 			node = top02
 			node = bottom02
+			crashTolerance = 40
 			addedMass = -0.045
 		}
 		SUBTYPE
@@ -112,7 +113,8 @@ PART
 			transform = OctoMedBare
 			transform = COLLISION14
 			transform = LFOTankMed	
-			addedCost = 1406.2		
+			addedCost = 1348		
+			crashTolerance = 50
 		}
 		SUBTYPE
 		{
@@ -121,8 +123,8 @@ PART
 			transform = OctoMedBare
 			transform = COLLISION14
 			transform = LFTankMed
-			addedCost = 1406.2	
-
+			addedCost = 1348	
+			crashTolerance = 50
 		}
 		SUBTYPE
 		{
@@ -131,7 +133,8 @@ PART
 			transform = OctoMedBare
 			transform = COLLISION14
 			transform = OXTankMed
-			addedCost = 1406.2	
+			addedCost = 1348
+			crashTolerance = 50
 		}
 		SUBTYPE
 		{
@@ -140,7 +143,8 @@ PART
 			transform = OctoMedBare
 			transform = COLLISION14
 			transform = MPTankMed
-			addedCost = 2625
+			addedCost = 4700
+			crashTolerance = 50
 
 		}
 		SUBTYPE
@@ -151,6 +155,7 @@ PART
 			transform = COLLISION14
 			transform = XeTankMed
 			addedCost = 9450
+			crashTolerance = 50
 		}
 		SUBTYPE
 		{
@@ -159,7 +164,8 @@ PART
 			transform = OctoMedBare
 			transform = COLLISION14
 			transform = OreTankMed
-			addedCost = 6000
+			addedCost = 5040
+			crashTolerance = 50
 		}
 	}
 }
