--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
@@ -74,6 +74,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.0125
+			crashTolerance = 60
 		}
 		SUBTYPE
 		{
@@ -88,6 +89,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.0175
+			crashTolerance = 50
 		}
 		SUBTYPE
 		{
@@ -101,6 +103,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.025
+			crashTolerance = 40
 		}
 	}
 	
