--- a/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionFuelTankTypes.cfg
@@ -1,4 +1,4 @@
-B9_TANK_TYPE
+B9_TANK_TYPE:NEEDS[CommunityResourcePack]
 {
 	name = LH2OCryo
 	tankMass = 0.0004375
@@ -15,7 +15,7 @@ B9_TANK_TYPE
 		unitsPerVolume = 0.4
 	}
 }
-B9_TANK_TYPE
+B9_TANK_TYPE:NEEDS[CommunityResourcePack]
 {
 	name = LH2Cryo
 	tankMass =  0.0003125
