--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
@@ -72,7 +72,7 @@ PART
 			transform = COLLIDERSIDE003
 			node = top02
 			node = bottom02
-			
+			crashTolerance = 60
 			addedMass = -0.04
 		}
 		
