--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
@@ -72,7 +72,7 @@ PART
 			transform = COLLIDERSIDE006
 			node = top02
 			node = bottom02
-			
+			crashTolerance = 60
 			addedMass = -0.02
 		}
 		
