--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
@@ -74,7 +74,7 @@ PART
 			transform = COLLISION17
 			node = top02
 			node = bottom02
-			
+			crashTolerance = 60
 			addedMass = -0.05
 		}
 		SUBTYPE
@@ -89,7 +89,7 @@ PART
 			transform = COLLISION17
 			node = top02
 			node = bottom02
-			
+			crashTolerance = 50
 			addedMass = -0.07
 		}
 		SUBTYPE
@@ -103,7 +103,7 @@ PART
 			transform = COLLISION17
 			node = top02
 			node = bottom02
-			
+			crashTolerance = 40
 			addedMass = -0.09
 		}
 		SUBTYPE
@@ -113,7 +113,8 @@ PART
 			transform = OctoLargeBare
 			transform = COLLISION15
 			transform = LFOTankLarge	
-			addedCost = 2812.4		
+			addedCost = 2696		
+			crashTolerance = 50
 		}
 		SUBTYPE
 		{
@@ -122,7 +123,8 @@ PART
 			transform = OctoLargeBare
 			transform = COLLISION15
 			transform = LFTankLarge
-			addedCost = 2812.4
+			addedCost = 2696
+			crashTolerance = 50
 
 		}
 		SUBTYPE
@@ -132,7 +134,8 @@ PART
 			transform = OctoLargeBare
 			transform = COLLISION15
 			transform = OXTankLarge
-			addedCost = 2812.4
+			addedCost = 2696
+			crashTolerance = 50
 		}
 		SUBTYPE
 		{
@@ -141,7 +144,8 @@ PART
 			transform = OctoLargeBare
 			transform = COLLISION15
 			transform = MPTankLarge
-			addedCost = 5250	
+			addedCost = 9400	
+			crashTolerance = 50
 
 		}
 		SUBTYPE
@@ -152,6 +156,7 @@ PART
 			transform = COLLISION15
 			transform = XeTankLarge
 			addedCost = 18900	
+			crashTolerance = 50
 		}
 		SUBTYPE
 		{
@@ -160,7 +165,8 @@ PART
 			transform = OctoLargeBare
 			transform = COLLISION15
 			transform = OreTankLarge
-			addedCost = 12000
+			addedCost = 9080
+			crashTolerance = 50
 		}
 	}
 }
