--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
@@ -82,6 +82,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.025
+			crashTolerance = 60
 		}
 		SUBTYPE
 		{
@@ -97,6 +98,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.045
+			crashTolerance = 50
 		}
 	}
 }
