--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
@@ -81,6 +81,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.0125
+			crashTolerance = 60
 		}
 		SUBTYPE
 		{
@@ -96,6 +97,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.025
+			crashTolerance = 50
 		}
 	}
 }
