--- a/GameData/NearFutureConstruction/Patches/NFConstructionConnectedLivingSpaces.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionConnectedLivingSpaces.cfg
@@ -1,5 +1,14 @@
 // CLS Compatability for Near Future Construction v0.6.0
 
+@PART[truss-octo-drone-01]:NEEDS[ConnectedLivingSpace]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
+{
+    MODULE
+	{
+		name = ModuleConnectedLivingSpace
+		passable = false
+	}
+}
+
 // Girders
 @PART[truss-octo-crew-01]:NEEDS[ConnectedLivingSpace]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
 {
