--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
@@ -14,14 +14,14 @@ PART
 		rotation = 0, 0, 0
 	}
 	rescaleFactor = 1
-	
+
 	node_stack_top01 = 0.0, 0.5022436, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_top02 = 0.0, 0.3728409, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_bottom02 = 0.0,-0.3702007, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom01 = 0.0, -0.4992971, 0.0, 0.0, -1.0, 0.0, 1
 	node_attach = -0.8413761,0.0, 0.0, -1.0, 0.0, 0.0, 1
 
-	
+
 	TechRequired = composites
 	entryCost = 1600
 	cost = 200
@@ -29,11 +29,11 @@ PART
 	subcategory = 0
 	title = Modular Multipurpose Hexa-Girder S1
 	manufacturer = Giga Bloks Construction Toys
-	description = A wee truss piece that fits around 1.25m pieces. Multiple variants are available. 
+	description = A wee truss piece that fits around 1.25m pieces. Multiple variants are available.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = hextruss, srf
-	
+
 	// --- standard part parameters ---
 	mass = 0.05
 	dragModelType = default
@@ -45,22 +45,22 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss saddle hollow hex nearfuture
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Subtype
-		
+
 		SUBTYPE
 		{
 			name = Solid
 			transform = SmallTruss
 			transform = COLLIDERSML
 		}
-		
+
 		SUBTYPE
 		{
 			name = Hollow
@@ -74,8 +74,9 @@ PART
 			node = bottom02
 			crashTolerance = 60
 			addedMass = -0.01
+			addedCost = -50
 		}
-		
-		
+
+
 	}
 }
