--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
@@ -20,9 +20,9 @@ PART
 	node_stack_bottom01 = 0.0, -0.9295291, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_bottom02 = 0.0, -0.6603499, 0.0, 0.0, 1.0, 0.0, 2
 	node_attach = 1.187252, 0.0, 0.0, 1.0, 0.0, 0.0, 2
-	
+
 	bulkheadProfiles = octotruss, srf
-	
+
 	TechRequired = metaMaterials
 	entryCost = 1800
 	cost = 200
@@ -44,22 +44,22 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss saddle hollow octo nearfuture
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Subtype
-		
+
 		SUBTYPE
 		{
 			name = Solid
 			transform = OctoSmall
 			transform = COLLISION13
 		}
-		
+
 		SUBTYPE
 		{
 			name = Hollow
@@ -74,6 +74,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.0125
+			addedCost = -20
 			crashTolerance = 60
 		}
 		SUBTYPE
@@ -90,6 +91,7 @@ PART
 			node = bottom02
 			addedMass = -0.0175
 			crashTolerance = 50
+			addedCost = -30
 		}
 		SUBTYPE
 		{
@@ -104,7 +106,8 @@ PART
 			node = bottom02
 			addedMass = -0.025
 			crashTolerance = 40
+			addedCost = -40
 		}
 	}
-	
+
 }
