--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01.cfg
@@ -19,7 +19,7 @@ PART
 	node_attach = 0.0, -0.04074037, 0.0, 0.0, -1.0, 0.0, 2
 
 	bulkheadProfiles = octotruss, srf
-	
+
 	TechRequired = metaMaterials
 	entryCost = 7600
 	cost = 875
@@ -27,7 +27,7 @@ PART
 	subcategory = 0
 	title = Modular Octo-Girder Radial Attach Node
 	manufacturer = Giga Bloks Construction Toys
-	description = A radial attachment node that allows the Modular Octo-Girder to, quite literally, do anything. Two variants that work at 90 or 45 degrees to a standard truss. 
+	description = A radial attachment node that allows the Modular Octo-Girder to, quite literally, do anything. Two variants that work at 90 or 45 degrees to a standard truss.
 	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
@@ -41,27 +41,29 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
-	
-	tags = connect frame scaffold structur strut truss nearfuture radial octo 
+
+	tags = connect frame scaffold structur strut truss nearfuture radial octo
 	MODULE
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Subtype
-		
+
 		SUBTYPE
 		{
 			name = Angled
 			transform = OctoAttach
 			transform = COLLISION
+
 		}
-		
+
 		SUBTYPE
 		{
 			name = Angled Hollow
 			transform = OctoAttachHollow
 			transform = COLLISION
-			
+			addedCost = -75
+			addedMass = -0.01
 		}
 		SUBTYPE
 		{
@@ -69,13 +71,14 @@ PART
 			transform = OctoAttachAlt
 			transform = COLLISIONALT
 		}
-		
+
 		SUBTYPE
 		{
 			name = Ortho Hollow
 			transform = OctoAttachAltHollow
 			transform = COLLISIONALT
-			
+			addedCost = -75
+			addedMass = -0.01
 		}
 	}
 }
