--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-01.cfg
@@ -1,5 +1,5 @@
 // Near Future Construction 0.6.0
-// 2.5m Truss Pressurized 
+// 2.5m Truss Pressurized
 PART
 {
 	name = truss-octo-crew-01
@@ -14,12 +14,12 @@ PART
 		rotation = 0, 0, 0
 	}
 	rescaleFactor = 1
-	
+
 	node_stack_top01 = 0.0, 3.7497899, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom01 = 0.0, -3.749789, 0.0, 0.0, -1.0, 0.0, 2
 	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 2
 
-	
+
 	TechRequired = composites
 	entryCost = 4500
 	cost = 1550
@@ -27,11 +27,11 @@ PART
 	subcategory = 0
 	title = Modular Pressurized Octo-Girder XL
 	manufacturer = Giga Bloks Construction Toys
-	description = A large octagonal truss piece with an integrated pressurized section. 
+	description = A large octagonal truss piece with an integrated pressurized section.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss, srf
-	
+
 	// --- standard part parameters ---
 	mass = 0.85
 	dragModelType = default
@@ -43,7 +43,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 1000
 	thermalMassModifier = 0.7 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss saddle hollow octo nearfuture pressu crew
 	MODULE
 	{
@@ -57,7 +57,7 @@ PART
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Subtype
-		
+
 		SUBTYPE
 		{
 			name = Solid
@@ -65,7 +65,7 @@ PART
 			transform = OctoLarge001
 			transform = COLLISION15
 		}
-		
+
 		SUBTYPE
 		{
 			name = Hollow
@@ -82,6 +82,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.05
+			addedCost = -80
 			crashTolerance = 60
 		}
 		SUBTYPE
@@ -98,6 +99,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.09
+			addedCost = -160
 			crashTolerance = 50
 		}
 	}
