--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
@@ -19,7 +19,7 @@ PART
 	node_stack_bottom01 = 0.0, -1.875814, 0.0, 0.0, -1.0, 0.0, 2
 	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 2
 
-	
+
 	TechRequired = metaMaterials
 	entryCost = 2900
 	cost = 1150
@@ -27,11 +27,11 @@ PART
 	subcategory = 0
 	title = Modular Pressurized Octo-Girder
 	manufacturer = Giga Bloks Construction Toys
-	description = A medium octagonal truss piece with an integrated pressurized section. 
+	description = A medium octagonal truss piece with an integrated pressurized section.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss, srf
-	
+
 	// --- standard part parameters ---
 	mass = 0.425
 	dragModelType = default
@@ -43,7 +43,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 1000
 	thermalMassModifier = 0.7 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss saddle hollow octo nearfuture pressu crew
 	MODULE
 	{
@@ -57,7 +57,7 @@ PART
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Subtype
-		
+
 		SUBTYPE
 		{
 			name = Solid
@@ -65,7 +65,7 @@ PART
 			transform = OctoMedium001
 			transform = COLLISION032
 		}
-		
+
 		SUBTYPE
 		{
 			name = Hollow
@@ -82,6 +82,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.025
+			addedCost = -40
 			crashTolerance = 60
 		}
 		SUBTYPE
@@ -98,6 +99,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.045
+			addedCost = -80
 			crashTolerance = 50
 		}
 	}
