--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
@@ -18,9 +18,9 @@ PART
 	node_stack_top01= 0.0, 0.9377186, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom01 = 0.0, -0.9295291, 0.0, 0.0, -1.0, 0.0, 2
 	node_attach = 1.187252, 0.0, 0.0, 1.0, 0.0, 0.0, 2
-	
+
 	bulkheadProfiles = octotruss, srf
-	
+
 	TechRequired = metaMaterials
 	entryCost = 1600
 	cost = 950
@@ -28,7 +28,7 @@ PART
 	subcategory = 0
 	title = Modular Pressurized Octo-Girder Micro
 	manufacturer = Giga Bloks Construction Toys
-	description = A small octagonal truss piece with an integrated pressurized section. 
+	description = A small octagonal truss piece with an integrated pressurized section.
 	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
@@ -42,7 +42,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 1000
 	thermalMassModifier = 0.7 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss saddle hollow octo nearfuture pressu crew
 	MODULE
 	{
@@ -56,7 +56,7 @@ PART
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Subtype
-		
+
 		SUBTYPE
 		{
 			name = Solid
@@ -64,7 +64,7 @@ PART
 			transform = OctoSmall001
 			transform = COLLISION031
 		}
-		
+
 		SUBTYPE
 		{
 			name = Hollow
@@ -81,6 +81,7 @@ PART
 			node = top02
 			node = bottom02
 			addedMass = -0.0125
+			addedCost = -20
 			crashTolerance = 60
 		}
 		SUBTYPE
@@ -96,6 +97,7 @@ PART
 			transform = COLLISION04
 			node = top02
 			node = bottom02
+			addedCost = -40
 			addedMass = -0.025
 			crashTolerance = 50
 		}
