--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-drone-01.cfg
@@ -14,10 +14,10 @@ PART
 		rotation = 0, 0, 0
 	}
 	rescaleFactor = 1
-	
+
 	node_stack_top = 0.0, 0.3020179, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.2430737, 0.0, 0.0, -1.0, 0.0, 2
-	
+
 	TechRequired = largeUnmanned
 	entryCost = 8900
 	cost = 4500
@@ -25,7 +25,7 @@ PART
 	subcategory = 0
 	title = Modular Octo-Girder Guidance Unit
 	manufacturer = Giga Bloks Construction Toys
-	description = Remotely operated guidance unit with the most advanced algorithms. Also incorporates a large, powerful set of reaction wheels suitable for moving large spacecraft. 
+	description = Remotely operated guidance unit with the most advanced algorithms. Also incorporates a large, powerful set of reaction wheels suitable for moving large spacecraft.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss
@@ -40,12 +40,12 @@ PART
 	breakingForce = 200
 	breakingTorque = 200
 	maxTemp = 2000
-	
+
 	explosionPotential = 0
 	vesselType = Probe
-	
+
 	tags = cmg command control (core fly gyro moment probe react sas satellite space stab steer torque connect frame scaffold structur strut truss
-	
+
 	MODULE
 	{
 		name = ModuleCommand
@@ -56,6 +56,13 @@ PART
 			rate = 0.08
 		}
 	}
+	MODULE
+	{
+		name = ModuleProbeControlPoint
+		minimumCrew = 1
+		multiHop = True
+	}
+
 	RESOURCE
 	{
 		name = ElectricCharge
@@ -73,10 +80,48 @@ PART
 			name = ElectricCharge
 			rate = 0.6
 		}
+		hasHibernation = True
+		hibernationMultiplier = 0.00125
 	}
 	MODULE
 	{
 		name = ModuleSAS
 		SASServiceLevel = 3
+	}
+	MODULE
+	{
+		name = ModuleKerbNetAccess
+		MinimumFoV = 5
+		MaximumFoV = 90
+		AnomalyDetection = 0.3
+		DISPLAY_MODES
+		{
+			Mode = Biome
+			Mode = Terrain
+		}
+	}
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		antennaType = INTERNAL
+		packetInterval = 1.0
+		packetSize = 2
+		packetResourceCost = 12.0
+		requiredResource = ElectricCharge
+		antennaPower = 5000
+		optimumRange = 2500
+		packetFloor = .1
+		packetCeiling = 5
+	}
+	MODULE
+	{
+		name = ModuleScienceContainer
+
+		reviewActionName = Review Stored Data
+		storeActionName = Store Experiments
+		evaOnlyStorage = True // i.e. can nearby regular vessels also do this, or EVA only
+		storageRange = 1.3
+		canBeTransferredToInVessel = True
+		canTransferInVessel = True
 	}
 }
