--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-01.cfg
@@ -14,28 +14,28 @@ PART
 		rotation = 0, 0, 0
 	}
 	rescaleFactor = 1
-	
+
 	node_stack_top01 = 0.0, 7.488, 0.0, 0.0, 1.0, 0.0, 4
 	node_stack_top02 = 0.0, 7.364, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_bottom01 = 0.0, -7.479, 0.0, 0.0, -1.0, 0.0, 4
 	node_stack_bottom02 = 0.0, -7.374, 0.0, 0.0, 1.0, 0.0, 3
 	node_attach = -2.505, 0.0, 0.0, 1.0, 0.0, 0.0, 4
 
-	
+
 	TechRequired = composites
-	entryCost = 2400
-	cost = 800
+	entryCost = 6400
+	cost = 3600
 	category = Structural
 	subcategory = 0
 	title = Modular Multipurpose Annular Truss XL
 	manufacturer = Giga Bloks Construction Toys
-	description = 
+	description = A gigantic truss suitable for all sorts of orbital construction. Contains multiple structural variants for infinite fun.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size4, srf
-	
+
 	// --- standard part parameters ---
-	mass = 0.45
+	mass = 3
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -45,9 +45,9 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss saddle hollow circle nearfuture
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -62,6 +62,8 @@ PART
 			name = Solid
 			transform = CENTERLRG
 			transform = COLLIDER_CTRLRG
+			addedMass = 0.5
+			addedCost = 720
 		}
 	}
 	MODULE
@@ -93,11 +95,15 @@ PART
 			transform = COLLIDER_OUTERLRGB03
 			transform = COLLIDER_OUTERLRGB04
 			transform = COLLIDER_OUTERLRGB05
+			addedMass = -0.4
+			addedCost = -1080
 		}
 		SUBTYPE
 		{
 			name = Hollow
 			transform = TRUSSLRGHOLLOW
+			addedMass = -0.7
+			addedCost = -2160
 		}
 	}
 	MODULE
@@ -115,6 +121,8 @@ PART
 			node = top02
 			transform = TOPLRG
 			transform = COLLIDER_TOPLRG
+			addedMass = 0.05
+			addedCost = 100
 		}
 	}
 	MODULE
@@ -132,6 +140,8 @@ PART
 			node = bottom02
 			transform = BOTTOMLRG
 			transform = COLLIDER_BOTTOMLRG
+			addedMass = 0.05
+			addedCost = 100
 		}
 	}
 }
