--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
@@ -14,28 +14,28 @@ PART
 		rotation = 0, 0, 0
 	}
 	rescaleFactor = 1
-	
+
 	node_stack_top01 = 0.0, 3.708, 0.0, 0.0, 1.0, 0.0, 4
 	node_stack_top02 = 0.0, 3.587, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_bottom01 = 0.0, -3.711, 0.0, 0.0, -1.0, 0.0, 4
 	node_stack_bottom02 = 0.0, -3.611, 0.0, 0.0, 1.0, 0.0, 3
 	node_attach = -2.505, 0.0, 0.0, 1.0, 0.0, 0.0, 4
 
-	
+
 	TechRequired = composites
-	entryCost = 2400
-	cost = 800
+	entryCost = 3400
+	cost = 1800
 	category = Structural
 	subcategory = 0
 	title = Modular Multipurpose Annular Truss
 	manufacturer = Giga Bloks Construction Toys
-	description = 
+	description = A medium size but still impressive truss suitable for all sorts of orbital construction. Contains multiple structural variants for infinite fun.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size4, srf
-	
+
 	// --- standard part parameters ---
-	mass = 0.45
+	mass = 1.5
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -45,9 +45,9 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss saddle hollow circle nearfuture
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -62,6 +62,8 @@ PART
 			name = Solid
 			transform = CENTER
 			transform = COLLIDER_CTR
+			addedMass = 0.25
+			addedCost = 360
 		}
 	}
 	MODULE
@@ -93,11 +95,15 @@ PART
 			transform = COLLIDER_OUTERB003
 			transform = COLLIDER_OUTERB004
 			transform = COLLIDER_OUTERB005
+			addedMass = -0.2
+			addedCost = -540
 		}
 		SUBTYPE
 		{
 			name = Hollow
 			transform = TRUSSHOLLOW
+			addedMass = -0.4
+			addedCost = -1080
 		}
 	}
 	MODULE
@@ -115,6 +121,8 @@ PART
 			node = top02
 			transform = TOP
 			transform = COLLIDER_TOP
+			addedMass = 0.05
+			addedCost = 100
 		}
 	}
 	MODULE
@@ -132,6 +140,8 @@ PART
 			node = bottom02
 			transform = BOTTOM
 			transform = COLLIDER_BOTTOM
+			addedMass = 0.05
+			addedCost = 100
 		}
 	}
 }
