--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03.cfg
@@ -14,28 +14,28 @@ PART
 		rotation = 0, 0, 0
 	}
 	rescaleFactor = 1
-	
+
 	node_stack_top01 = 0.0, 1.871, 0.0, 0.0, 1.0, 0.0, 4
 	node_stack_top02 = 0.0, 1.77, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_bottom01 = 0.0, -1.88, 0.0, 0.0, -1.0, 0.0, 4
 	node_stack_bottom02 = 0.0, -1.777, 0.0, 0.0, 1.0, 0.0, 3
 	node_attach = -2.505, 0.0, 0.0, 1.0, 0.0, 0.0, 4
 
-	
+
 	TechRequired = composites
-	entryCost = 2400
-	cost = 800
+	entryCost = 2000
+	cost = 900
 	category = Structural
 	subcategory = 0
 	title = Modular Multipurpose Annular Truss Mini
 	manufacturer = Giga Bloks Construction Toys
-	description = 
+	description = A smallishbut massive circular truss. Contains multiple structural variants for infinite fun.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size4, srf
-	
+
 	// --- standard part parameters ---
-	mass = 0.45
+	mass = 0.75
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -45,9 +45,9 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss saddle hollow circle nearfuture
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -62,6 +62,8 @@ PART
 			name = Solid
 			transform = CENTERSML
 			transform = COLLIDER_CTRSML
+			addedMass = 0.125
+			addedCost = 180
 		}
 	}
 	MODULE
@@ -83,6 +85,7 @@ PART
 			transform = COLLIDER_OUTERSMLA03
 			transform = COLLIDER_OUTERSMLA04
 			transform = COLLIDER_OUTERSMLA05
+
 		}
 		SUBTYPE
 		{
@@ -93,11 +96,15 @@ PART
 			transform = COLLIDER_OUTERSMLB03
 			transform = COLLIDER_OUTERSMLB04
 			transform = COLLIDER_OUTERSMLB05
+			addedMass = -0.1
+			addedCost = -270
 		}
 		SUBTYPE
 		{
 			name = Hollow
 			transform = TRUSSSMLHOLLOW
+			addedMass = -0.2
+			addedCost = -540
 		}
 	}
 	MODULE
@@ -115,6 +122,8 @@ PART
 			node = top02
 			transform = TOPSML
 			transform = COLLIDER_TOPSML
+			addedMass = 0.05
+			addedCost = 100
 		}
 	}
 	MODULE
@@ -132,6 +141,8 @@ PART
 			node = bottom02
 			transform = BOTTOMSML
 			transform = COLLIDER_BOTTOMSML
+			addedMass = 0.05
+			addedCost = 100
 		}
 	}
 }
