--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-04.cfg
@@ -14,14 +14,14 @@ PART
 		rotation = 0, 0, 0
 	}
 	rescaleFactor = 1
-	
+
 	node_stack_top01 = 0.0, 0.938, 0.0, 0.0, 1.0, 0.0, 4
 	node_stack_top02 = 0.0, 0.836, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_bottom01 = 0.0, -0.943, 0.0, 0.0, -1.0, 0.0, 4
 	node_stack_bottom02 = 0.0, -0.842, 0.0, 0.0, 1.0, 0.0, 3
 	node_attach = -2.505, 0.0, 0.0, 1.0, 0.0, 0.0, 4
 
-	
+
 	TechRequired = composites
 	entryCost = 2400
 	cost = 800
@@ -29,11 +29,11 @@ PART
 	subcategory = 0
 	title = Modular Multipurpose Annular Truss Micro
 	manufacturer = Giga Bloks Construction Toys
-	description = 
+	description = A mini annular truss segment! It's so tiny we almost forgot that it's STILL HUGE. Contains multiple structural variants for infinite fun.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size4, srf
-	
+
 	// --- standard part parameters ---
 	mass = 0.45
 	dragModelType = default
@@ -45,9 +45,9 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss saddle hollow circle nearfuture
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -62,6 +62,8 @@ PART
 			name = Solid
 			transform = CENTERMINI
 			transform = COLLIDER_CTRMINI
+			addedMass = 0.0625
+			addedCost = 90
 		}
 	}
 	MODULE
@@ -93,11 +95,15 @@ PART
 			transform = COLLIDER_OUTERMINIB03
 			transform = COLLIDER_OUTERMINIB04
 			transform = COLLIDER_OUTERMINIB05
+			addedMass = -0.05
+			addedCost = -135
 		}
 		SUBTYPE
 		{
 			name = Hollow
 			transform = TRUSSMINIHOLLOW
+			addedMass = -0.1
+			addedCost = -270
 		}
 	}
 	MODULE
@@ -115,6 +121,8 @@ PART
 			node = top02
 			transform = TOPMINI
 			transform = COLLIDER_TOPMINI
+			addedMass = 0.05
+			addedCost = 100
 		}
 	}
 	MODULE
@@ -132,6 +140,8 @@ PART
 			node = bottom02
 			transform = BOTTOMMINI
 			transform = COLLIDER_BOTTOMMINI
+			addedMass = 0.05
+			addedCost = 100
 		}
 	}
 }
