--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-02.cfg
@@ -14,26 +14,26 @@ PART
 		rotation = 0, 0, 0
 	}
 	rescaleFactor = 1
-	
-	node_stack_top01 = 0.0, 0.153, 0.0, 0.0, 1.0, 0.0, 4	
-	node_stack_bottom01 = 0.0, -0.247, 0.0, 0.0, -1.0, 0.0, 3
-	
 
-	
+	node_stack_top01 = 0.0, 0.153, 0.0, 0.0, 1.0, 0.0, 4
+	node_stack_bottom01 = 0.0, -0.247, 0.0, 0.0, -1.0, 0.0, 3
+
+
+
 	TechRequired = composites
-	entryCost = 2400
-	cost = 800
+	entryCost = 4150
+	cost = 1700
 	category = Structural
 	subcategory = 0
 	title = Modular Annular Truss Adapter V2
 	manufacturer = Giga Bloks Construction Toys
-	description = 
+	description = Adapts a gigantic 5 meter truss mount to a 3.75m stack in a very small space.
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size4, size3
-	
+
 	// --- standard part parameters ---
-	mass = 0.45
+	mass = 0.35
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -43,8 +43,8 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss circle nearfuture adapt
-	
-	
+
+
 }
