--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
@@ -20,9 +20,9 @@ PART
 	node_stack_bottom01 = 0.0, -0.4722692, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_bottom02 = 0.0, -0.1998693, 0.0, 0.0, 1.0, 0.0, 2
 	node_attach = 1.187252, 0.0, 0.0, 1.0, 0.0, 0.0, 2
-	
+
 	bulkheadProfiles = octotruss, srf
-	
+
 	TechRequired = metaMaterials
 	entryCost = 1200
 	cost = 100
@@ -44,22 +44,22 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss saddle hollow octo nearfuture
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Subtype
-		
+
 		SUBTYPE
 		{
 			name = Solid
 			transform = OctoEighth
 			transform = COLLISIONNANO
 		}
-		
+
 		SUBTYPE
 		{
 			name = Hollow
@@ -75,8 +75,9 @@ PART
 			node = bottom02
 			addedMass = -0.00625
 			crashTolerance = 60
+			addedCost = -10
 		}
 
 	}
-	
+
 }
