Update tech tree locations

--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-125.cfg
@@ -3,7 +3,7 @@
 PART
 {
 	name = adapter-25-125
-	module = Strut
+	module = Part
 	author = Chris Adderley
 
 	MODEL
@@ -19,7 +19,7 @@ PART
 	node_stack_bottom = 0.0, -0.1324021, 0.0, 0.0, -1.0, 0.0, 2
 
 	bulkheadProfiles = size1, size2
-	
+
 	TechRequired = advConstruction
 	entryCost = 2500
 	cost = 350
@@ -41,6 +41,6 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	fuelCrossFeed = True
-	
+
 	tags = connect frame scaffold structur strut truss nearfuture
 }
