--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-01.cfg
@@ -26,26 +26,26 @@ PART {
 	node_stack_bottom06 = -0.5974164, 	-0.1774819, 	0.5974164, 	0.0, -1.0, 0.0, 0
 	node_stack_bottom07 = 0.0, 			-0.1774819, 	0.8448744, 	0.0, -1.0, 0.0, 0
 	node_stack_bottom08 = 0.5974164, 	-0.1774819, 	0.5974164, 	0.0, -1.0, 0.0, 0
-	
+
 	// 4 more nodes for hex
 	node_stack_bottom09 = 0.4224372, 	-0.1774819, 	-0.7316827, 0.0, -1.0, 0.0, 0
 	node_stack_bottom10 = -0.4224372, 	-0.1774819, 	-0.7316827, 0.0, -1.0, 0.0, 0
 	node_stack_bottom11 = -0.4224372, 	-0.1774819, 	0.7316827, 	0.0, -1.0, 0.0, 0
 	node_stack_bottom12 = 0.4224372, 	-0.1774819, 	0.7316827, 	0.0, -1.0, 0.0, 0
-	
+
 	node_stack_bottom13 = -0.0, 		-0.1774819, 	0.0, 		0.0, -1.0, 0.0, 0
 	node_stack_bottom14 = -0.0, 		-1.35, 			0.0, 		0.0, -1.0, 0.0, 2
-	
+
 	bulkheadProfiles = size2, size0
-	
-	TechRequired = metaMaterials
+
+	TechRequired = advMetalworks
 	entryCost = 1600
 	cost = 450
 	category = Structural
 	subcategory = 0
 	title = SE-4-OMNI Stack Multi-Adapter
 	manufacturer = O.M.B. Demolition Enterprises
-	description = This breakthrough in modularity allows for a 2.5m stack to be split to between 2 and 8 0.625m stacks. With a cookie on top. 
+	description = This breakthrough in modularity allows for a 2.5m stack to be split to between 2 and 8 0.625m stacks. With a cookie on top.
 
 	attachRules = 1,0,1,1,0
 	stackSymmetry = 1
@@ -59,15 +59,15 @@ PART {
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 	fuelCrossFeed = True
-	
+
 	tags = connect frame scaffold structur strut truss nearfuture adapter stack multi two four six eight ?2 ?4 ?6 ?8
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
 		switcherDescription = Nodes
-		
+
 		SUBTYPE
 		{
 			name = Two
@@ -112,7 +112,7 @@ PART {
 			node = bottom07
 			node = bottom08
 		}
-		
+
 	}
-	
+
 }
