--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
@@ -13,10 +13,10 @@ PART
 	node_attach = 0.0, 0.0, 0.4732634, 0.0, 0.0, -1.0, 1
 	node_stack_top = 0.0, 0.07728595, 0.0, 0.0, 1.0, 0.0, 0
 	node_stack_bottom = 0.0, -0.07728595, 0.0, 0.0, -1.0, 0.0, 0
-	
+
 	bulkheadProfiles = size0, srf
-	
-	TechRequired = nanolathing
+
+	TechRequired = advMetalworks
 	entryCost = 1950
 	MODEL
 	{
@@ -24,9 +24,9 @@ PART
 		position = 0.0, 0.0, 0.0
 		scale = 1.0,1.0,1.0
 		rotation = 0, 0, 0
-		
+
 	}
-	
+
 	cost = 675
 	category = Structural
 	subcategory = 0
