--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125.cfg
@@ -12,7 +12,7 @@ PART
 		position = 0.0, 0.0, 0.0
 		scale = 1.0,1.0,1.0
 		rotation = 0, 0, 0
-		
+
 	}
 	bulkheadProfiles = size1, srf
 	scale = 1
@@ -21,12 +21,12 @@ PART
 	node_attach = 0.0, 0.0, 0.7694429, 0.0, 0.0, -1.0, 1
 	node_stack_top = 0.0, 0.09551144, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -0.09669527, 0.0, 0.0, -1.0, 0.0, 1
-	
-	TechRequired = metaMaterials
+
+	TechRequired = advMetalworks
 	entryCost = 3100
 	cost = 1350
-	
-	
+
+
 	category = Structural
 	subcategory = 0
 	title = S-MED Radial Stack Adapter
