--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.2
+// Near Future Construction 0.7.0
 // 5m Truss - Long Adapter
 PART
 {
@@ -20,7 +20,7 @@ PART
 
 
 
-	TechRequired = composites
+	TechRequired = nanolathing
 	entryCost = 4500
 	cost = 1700
 	category = Structural
