--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.1
+// Near Future Construction 0.7.0
 // 1.25m Truss - Small
 PART
 {
@@ -22,7 +22,7 @@ PART
 	node_attach = -0.8413761,0.0, 0.0, -1.0, 0.0, 0.0, 1
 
 
-	TechRequired = composites
+	TechRequired = advMetalworks
 	entryCost = 1600
 	cost = 200
 	category = Structural
