--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.0
+// Near Future Construction 0.7.0
 // 2.5m Truss - Structural - Quarter
 PART
 {
@@ -23,7 +23,7 @@ PART
 
 	bulkheadProfiles = octotruss, srf
 
-	TechRequired = metaMaterials
+	TechRequired = nanolathing
 	entryCost = 1800
 	cost = 200
 	category = Structural
