--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.0
+// Near Future Construction 0.7.0
 // 2.5m Truss - Pressurized Half
 PART
 {
@@ -20,7 +20,7 @@ PART
 	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 2
 
 
-	TechRequired = metaMaterials
+	TechRequired = nanolathing
 	entryCost = 2900
 	cost = 1150
 	category = Structural
