--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.0
+// Near Future Construction 0.7.0
 // 2.5m Truss - Pressurized Quarter
 PART
 {
@@ -21,7 +21,7 @@ PART
 
 	bulkheadProfiles = octotruss, srf
 
-	TechRequired = metaMaterials
+	TechRequired = nanolathing
 	entryCost = 1600
 	cost = 950
 	category = Structural
