--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-hub-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-hub-crew-01.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.0
+// Near Future Construction 0.7.0
 // 2.5m truss - Hub
 PART
 {
@@ -25,8 +25,8 @@ PART
 	node_stack_bottom = 0,-1.270871, 0, 0, -1, 0, 2
 
 	bulkheadProfiles = octotruss
-	
-	TechRequired = metaMaterials
+
+	TechRequired = nanolathing
 	entryCost = 3640
 	cost = 1600
 	category = Structural
