--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-375/adapter-375-25.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-375/adapter-375-25.cfg
@@ -20,8 +20,8 @@ PART
 	node_stack_bottom = 0.0, -0.2954639, 0.0, 0.0, -1.0, 0.0, 3
 
 	bulkheadProfiles = size3, size2
-	
-	TechRequired = metaMaterials
+
+	TechRequired = nanolathing
 	entryCost = 4800
 	cost = 1800
 	category = Structural
@@ -43,6 +43,6 @@ PART
 	maxTemp = 2000
 	fuelCrossFeed = True
 	thermalMassModifier = 0.4 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss nearfuture radial
 }
