--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-04.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.2
+// Near Future Construction 0.7.0
 // 5m Truss - Structural Quarter
 PART
 {
@@ -22,7 +22,7 @@ PART
 	node_attach = -2.505, 0.0, 0.0, 1.0, 0.0, 0.0, 4
 
 
-	TechRequired = composites
+	TechRequired = nanolathing
 	entryCost = 2400
 	cost = 800
 	category = Structural
