--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-adapter-01.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.1
+// Near Future Construction 0.7.0
 // 1.25m Truss - Adapter
 PART
 {
@@ -14,13 +14,13 @@ PART
 		rotation = 0, 0, 0
 	}
 	rescaleFactor = 1
-	
+
 	node_stack_top = 0.0, 0.2400633, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -0.4132609, 0.0, 0.0, -1.0, 0.0, 1
 	node_attach = 0.0,-0.4132609, 0.0, 0.0, -1.0, 0.0, 1
 
-	
-	TechRequired = composites
+
+	TechRequired = advMetalworks
 	entryCost = 2000
 	cost = 350
 	category = Structural
@@ -31,7 +31,7 @@ PART
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = hextruss, srf, size1
-	
+
 	// --- standard part parameters ---
 	mass = 0.03
 	dragModelType = default
@@ -43,7 +43,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss nearfuture hex adapter stack
-	
+
 }
