--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.2
+// Near Future Construction 0.7.0
 // 2.5m Truss - Structural
 PART
 {
@@ -22,7 +22,7 @@ PART
 	node_attach = 1.187252,0.0, 0.0, 1.0, 0.0, 0.0, 2
 
 
-	TechRequired = composites
+	TechRequired = advMetalworks
 	entryCost = 2900
 	cost = 800
 	category = Structural
