--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.2
+// Near Future Construction 0.7.0
 // 2.5m Truss - Structural - Eighth
 PART
 {
@@ -23,7 +23,7 @@ PART
 
 	bulkheadProfiles = octotruss, srf
 
-	TechRequired = metaMaterials
+	TechRequired = nanolathing
 	entryCost = 1200
 	cost = 100
 	category = Structural
