--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-adapter-01.cfg
@@ -1,4 +1,4 @@
-// Near Future Construction 0.6.0
+// Near Future Construction 0.7.0
 // 2.5m Truss - Adapter
 PART
 {
@@ -14,13 +14,13 @@ PART
 		rotation = 0, 0, 0
 	}
 	rescaleFactor = 1
-	
+
 	node_stack_top = 0.0, 0.3473907, 0.0, 0.0, 1.0, 0.0, 3
 	node_stack_bottom = 0.0, -0.3661254, 0.0, 0.0, -1.0, 0.0, 3
 	node_attach = 0.0,-0.3661254, 0.0, 0.0, -1.0, 0.0, 3
 
-	
-	TechRequired = composites
+
+	TechRequired = advMetalworks
 	entryCost = 2400
 	cost = 550
 	category = Structural
@@ -31,7 +31,7 @@ PART
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = octotruss, srf
-	
+
 	// --- standard part parameters ---
 	mass = 0.08
 	dragModelType = default
@@ -43,8 +43,8 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
-	
+
 	tags = connect frame scaffold structur strut truss nearfuture octo adapter stack
-	
-	
+
+
 }
