--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-01.cfg
@@ -1,14 +1,14 @@
 // Near Future Construction 0.7.0
-// 2.5m Truss Attach
+// 2.5m Truss angled connector
 PART
 {
-	name = truss-octo-attach-01
+	name = truss-octo-angled-01
 	module = Part
 	author = Chris Adderley
 
 	MODEL
 	{
-		model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-attach-01
+		model = NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-01
 		position = 0.0, 0.0, 0.0
 		scale = 1,1,1
 		rotation = 0, 0, 0
@@ -21,17 +21,17 @@ PART
 	bulkheadProfiles = octotruss, srf
 
 	TechRequired = nanolathing
-	entryCost = 7600
-	cost = 875
+	entryCost = 2450
+	cost = 600
 	category = Structural
 	subcategory = 0
-	title = Modular Octo-Girder Radial Attach Node
+	title = Modular Octo-Girder Angular Connector
 	manufacturer = Giga Bloks Construction Toys
-	description = A radial attachment node that allows the Modular Octo-Girder to, quite literally, do anything. Two variants that work at 90 or 45 degrees to a standard truss.
+	description = A specialized angled octo-girder, available in angular increments of 90, 45 and 30 degrees.
 	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
-	mass = 0.10
+	mass = 0.25
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -47,11 +47,11 @@ PART
 	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitch
-		switcherDescription = Subtype
+		switcherDescription = Angle
 
 		SUBTYPE
 		{
-			name = Angled
+			name = 90
 			transform = OctoAttach
 			transform = COLLISION
 
@@ -59,26 +59,19 @@ PART
 
 		SUBTYPE
 		{
-			name = Angled Hollow
+			name = 45
 			transform = OctoAttachHollow
 			transform = COLLISION
-			addedCost = -75
-			addedMass = -0.01
+			addedCost = -250
+			addedMass = -0.125
 		}
 		SUBTYPE
 		{
-			name = Ortho
-			transform = OctoAttachAlt
-			transform = COLLISIONALT
-		}
-
-		SUBTYPE
-		{
-			name = Ortho Hollow
-			transform = OctoAttachAltHollow
-			transform = COLLISIONALT
-			addedCost = -75
-			addedMass = -0.01
+			name = 30
+			transform = OctoAttachHollow
+			transform = COLLISION
+			addedCost = -350
+			addedMass = -0.17
 		}
 	}
 }
