--- a/GameData/NearFutureConstruction/Patches/NFConstructionCommunityTechTree.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCommunityTechTree.cfg
@@ -1,15 +1,37 @@
-// CTT Compatability for Near Future Construction v0.6.0
+// CTT Compatibility for Near Future Construction v0.6.0
 
 // Adapters
 
-// Hubs in exoticAlloys
+// Hubs and fancy connectors in exoticAlloys
 @PART[truss-octo-hub-01]:NEEDS[CommunityTechTree]
 {
-	@TechRequired = nanolathing
+	@TechRequired = exoticAlloys
 }
-@PART[truss-octo-hub-02]:NEEDS[CommunityTechTree]
+@PART[truss-octo-hub-crew-01]:NEEDS[CommunityTechTree]
 {
-	@TechRequired = nanolathing
+	@TechRequired = exoticAlloys
+}
+@PART[truss-octo-attach-01]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = exoticAlloys
+}
+@PART[truss-octo-angled-01]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = exoticAlloys
+}
+
+// Big trusses in exoticAlloys (not the standard size)
+@PART[truss-circular-01]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = exoticAlloys
+}
+@PART[truss-circular-03]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = exoticAlloys
+}
+@PART[truss-circular-04]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = exoticAlloys
 }
 
 // Heavy docking ports in Orbital Assembly
@@ -29,4 +51,7 @@
 {
 	@TechRequired = orbitalAssembly
 }
-
+@PART[truss-circular-docking-01]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = orbitalMegastructures
+}
