--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-01.cfg
@@ -15,8 +15,10 @@ PART
 	}
 	rescaleFactor = 1
 
-	node_stack_top = 0.0, 0.3593886, 0.0, 0.0, 1.0, 0.0, 2
-	node_attach = 0.0, -0.04074037, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_top01 = 0.0, 1.199, 1.244, 0.0, 0.0, 1.0, 2
+	node_stack_top02 = 0.0, 0.899, 0.4018, 0.0, 0.5, 0.5, 2
+	node_stack_top03 = 0.0, 0.665, 0.197, 0.0, 0.66666, 0.33333, 2
+	node_stack_bottom = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
 
 	bulkheadProfiles = octotruss, srf
 
@@ -51,25 +53,29 @@ PART
 
 		SUBTYPE
 		{
-			name = 90
-			transform = OctoAttach
-			transform = COLLISION
-
+			name = 90 Degree
+			node = top01
+			transform = Truss90A
+			transform = Truss90B
 		}
 
 		SUBTYPE
 		{
-			name = 45
-			transform = OctoAttachHollow
-			transform = COLLISION
+			name = 45 Degree
+			node = top02
+			transform = Truss45A
+			transform = Truss45B
+			transform = COLLISION45D
 			addedCost = -250
 			addedMass = -0.125
 		}
 		SUBTYPE
 		{
-			name = 30
-			transform = OctoAttachHollow
-			transform = COLLISION
+			name = 30 Degree
+			node = top03
+			transform = Truss30A
+			transform = Truss30B
+			transform = COLLISION30D
 			addedCost = -350
 			addedMass = -0.17
 		}
