--- a/GameData/NearFutureConstruction/Patches/NFConstructionCommunityTechTree.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCommunityTechTree.cfg
@@ -19,7 +19,10 @@
 {
 	@TechRequired = exoticAlloys
 }
-
+@PART[truss-octo-angled-crew-01]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = exoticAlloys
+}
 // Big trusses in exoticAlloys (not the standard size)
 @PART[truss-circular-01]:NEEDS[CommunityTechTree]
 {
