--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
@@ -15,8 +15,11 @@ PART
 	}
 	rescaleFactor = 1
 
-	node_stack_top = 0.0, 0.3593886, 0.0, 0.0, 1.0, 0.0, 2
-	node_attach = 0.0, -0.04074037, 0.0, 0.0, -1.0, 0.0, 2
+		node_stack_top01 = 0.0, 1.199, 1.244, 0.0, 0.0, 1.0, 2
+	node_stack_top02 = 0.0, 0.899, 0.4018, 0.0, 0.5, 0.5, 2
+	node_stack_top03 = 0.0, 0.665, 0.197, 0.0, 0.66666, 0.33333, 2
+	node_stack_bottom = 0.0, -0.07155213, 0.0, 0.0, -1.0, 0.0, 2
+
 
 	bulkheadProfiles = octotruss, srf
 
@@ -42,7 +45,7 @@ PART
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
-	tags = connect frame scaffold structur strut truss nearfuture radial octo
+	tags = connect frame scaffold structur strut truss nearfuture radial octo crew pres tube can
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -51,27 +54,36 @@ PART
 
 		SUBTYPE
 		{
-			name = 90
-			transform = OctoAttach
-			transform = COLLISION
-
+			name = 90 Degree
+			node = top01
+			transform = Truss90A
+			transform = Truss90B
+			transform = Truss90Crew
 		}
 
 		SUBTYPE
 		{
-			name = 45
-			transform = OctoAttachHollow
-			transform = COLLISION
-			addedCost = -500
-			addedMass = -0.25
+			name = 45 Degree
+			node = top02
+			transform = Truss45A
+			transform = Truss45B
+			transform = Truss45CrewA
+			transform = Truss45CrewB
+			transform = COLLISION45D
+			addedCost = -250
+			addedMass = -0.125
 		}
 		SUBTYPE
 		{
-			name = 30
-			transform = OctoAttachHollow
-			transform = COLLISION
-			addedCost = -800
-			addedMass = -0.33
+			name = 30 Degree
+			node = top03
+			transform = Truss30A
+			transform = Truss30B
+			transform = Truss30CrewA
+			transform = Truss30CrewB
+			transform = COLLISION30D
+			addedCost = -350
+			addedMass = -0.17
 		}
 	}
 }
