minor cfg fixes

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-02.cfg
@@ -51,6 +51,8 @@ PART
 		animationName = TrussMedLights
 		startEventGUIName = Lights On
 		endEventGUIName = Lights Off
+		actionGUIName = Toggle Lights
+        defaultActionGroup = Light
 	}
 	MODULE
 	{
