--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
@@ -50,6 +50,8 @@ PART
 		animationName = TrussSmlLights
 		startEventGUIName = Lights On
 		endEventGUIName = Lights Off
+		actionGUIName = Toggle Lights
+        defaultActionGroup = Light
 	}
 	MODULE
 	{
