--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
@@ -22,18 +22,18 @@ PART
 
 	TechRequired = nanolathing
 	entryCost = 4500
-	cost = 1700
+	cost = 1400
 	category = Structural
 	subcategory = 0
 	title = Modular Annular Truss Adapter
 	manufacturer = Giga Bloks Construction Toys
-	description = Adapts a gigantic 5 meter truss mount to a 3.75m stack.
+	description = Adapts a gigantic 5 meter truss mount to a 3.75m stack. Hollow, with an alternate version with a central truss
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size4, size3
 
 	// --- standard part parameters ---
-	mass = 0.5
+	mass = 0.4
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -46,5 +46,23 @@ PART
 
 	tags = connect frame scaffold structur strut truss circle nearfuture adapt
 
-
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitch
+		switcherDescription = Core Truss
+		SUBTYPE
+		{
+			name = None
+			transform = AdapterCoreBit
+		}
+		SUBTYPE
+		{
+			name = Solid
+			transform = ADAPTERCore
+			transform = COLLIDER_ADAPTCORE
+			addedMass = 0.1
+			addedCost = 300
+		}
+	}
 }
